# plsexplain

./: .buildinfo  .editorconfig  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  q  search.html  searchindex.js  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  setup-workspace.sh
.github/workflows/: ci.yml
_sources/: index.rst.txt
_sources/contributing/: code_style.rst.txt  contributing_changes.rst.txt  index.rst.txt  product_design.rst.txt  testing_changes.rst.txt
_sources/getting-started/: index.rst.txt
_sources/user-guide/: basics.rst.txt  index.rst.txt  model_explanations.rst.txt  prediction_explanations.rst.txt
client/: .babelrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  jest.config.js  jest.config.json  jest.config.ts  package-lock.json  package.json  stryker.conf.json  testSetup.js  tsconfig.json  webpack.config.js
client/__mocks__/: fileMock.js
client/public/: index.html
client/src/: App.spec.tsx  App.tsx  actions.spec.ts  actions.ts  api.ts  index.scss  index.tsx  store.ts
client/src/__samples__/: feature-importance.json  prediction-breakdown.json
client/src/__snapshots__/: App.spec.tsx.snap
client/src/components/: App.scss  App.spec.tsx  App.tsx  ClassificationPerformance.spec.tsx  ClassificationPerformance.tsx  DashboardContent.tsx  FeatureImportance.spec.tsx  FeatureImportance.tsx  FeatureProfile.spec.tsx  FeatureProfile.tsx  InteractivePlotCard.spec.tsx  InteractivePlotCard.tsx  LoadingIndicator.spec.tsx  LoadingIndicator.tsx  ModelExplanationDashboard.tsx  ModelType.spec.tsx  ModelType.tsx  Navigation.tsx  NavigationBar.spec.tsx  NavigationBar.tsx  Plot.tsx  PlotCard.tsx  PredictionBreakdown.tsx  PredictionDashboardHeader.tsx  PredictionExplanationDashboard.tsx  RegressionPerformance.spec.tsx  RegressionPerformance.tsx
client/src/containers/: NavigationContainer.tsx
client/src/pages/: ModelDashboardPage.spec.tsx  ModelDashboardPage.tsx  OverviewPage.tsx  PredictionDashboard.scss  PredictionDashboardPage.tsx
client/src/pages/__snapshots__/: ModelDashboardPage.spec.tsx.snap
client/src/redux/: actions.ts  metadata.spec.ts  metadata.ts  modelExplanations.spec.ts  modelExplanations.ts  navigation.spec.ts  navigation.ts  predictionExplanations.spec.ts  predictionExplanations.ts  store.ts
contributing/: code_style.html  contributing_changes.html  dev_environment.html  index.html  product_design.html  reporting_issues.html  testing_changes.html
docs/source/: conf.py  index.rst
docs/source/contributing/: contributing_changes.rst  dev_environment.rst  index.rst  reporting_issues.rst
docs/source/getting-started/: index.rst  installing.rst  overview.rst  whatsnew.rst
docs/source/user-guide/: index.rst  limitations.rst  model_explanations.rst
getting-started/: index.html  installing.html  overview.html  whatsnew.html
plsexplain/: __init__.py  cli.py  dashboard.py  server.py
sample/: test.csv
tests/: test_dashboard.py
user-guide/: basics.html  features.html  index.html  limitations.html  model_explanations.html  prediction_explanations.html
(+4 files in other folders)
