[project]
name = "plsexplain"

authors = [
    { name = "Willem Meints", email = "willem.meints@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]
license = { file = "LICENSE" }
dependencies = [
    "uvicorn >= 0.15",
    "dalex >= 1.4",
    "fastapi >= 0.68"
]

[project.urls]
Source = "https://github.com/wmeints/plsexplain"
Homepage = "https://wmeints.github.io/plsexplain"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
