[metadata]
name = plsexplain
version = 0.3.0
description = Create an explainable AI dashboard for your machine learning model.
long_description = file: README.md
license = MIT

project_urls =
    Source = https://github.com/wmeints/plsexplain
    Homepage = https://wmeints.github.io/plsexplain

[options]
zip_safe = False
include_package_data = True
packages = plsexplain
install_requires =
    uvicorn >= 0.15
    dalex >= 1.4
    fastapi >= 0.68

[options.entry_points]
console_scripts =
    plsexplain = plsexplain.cli:main
